Fix: If a photo is left aligned, 10px of padding added to the right side of the photo. If a photo is right aligned, 10px of padding added to the left of the photo. 10px added to bottom of photo

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -1485,5 +1485,12 @@ body.node-type-blog-front .node-blog-front h2.title {
 
 .field-name-body img[style~="float: right"] {
     margin-left: 10px;
-    
+}
+
+/* overridden by javascript */
+.field-type-text-with-summary img {
+    /* margin left / right */
+}
+.main-content .block-boxes-title-features .views-row {
+	/* height */
 }
